[gd_scene load_steps=13 format=3 uid="uid://bxki4tmu3aj1s"]

[ext_resource type="Texture2D" uid="uid://dsscj83g812ca" path="res://Characters/Npc/kirby_idle.png" id="1_6jogw"]
[ext_resource type="Script" uid="uid://bdty1tcvgy4ke" path="res://Characters/Npc/Npc.gd" id="1_f4i7g"]
[ext_resource type="Texture2D" uid="uid://begtcjkl6tjrw" path="res://Management/dialoguebox/creepersprite.png" id="3_xbboc"]
[ext_resource type="Texture2D" uid="uid://bttimkhxhx6ve" path="res://Management/dialoguebox/png fundo transparente.png" id="4_nsmq5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6jogw"]
radius = 19.0
height = 50.0

[sub_resource type="Animation" id="Animation_xbboc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_f4i7g"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pja81"]
_data = {
&"RESET": SubResource("Animation_xbboc"),
&"idle": SubResource("Animation_f4i7g")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_xbboc"]
radius = 53.037724

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f4i7g"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_xbboc"]

[sub_resource type="LabelSettings" id="LabelSettings_pja81"]
font_size = 10

[node name="Kirby" type="StaticBody2D"]
script = ExtResource("1_f4i7g")

[node name="Texture" type="Sprite2D" parent="."]
position = Vector2(-0.33333316, -17)
scale = Vector2(0.6666667, 0.6666667)
texture = ExtResource("1_6jogw")
hframes = 3

[node name="Collision" type="CollisionShape2D" parent="."]
show_behind_parent = true
position = Vector2(0, -16)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_6jogw")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pja81")
}
autoplay = "idle"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 9
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(0, -16)
shape = SubResource("CircleShape2D_xbboc")

[node name="CanvasLayer" type="CanvasLayer" parent="Area2D"]

[node name="Timer" type="Timer" parent="Area2D/CanvasLayer"]

[node name="DialogueBox" type="Label" parent="Area2D/CanvasLayer"]
offset_top = 486.0
offset_right = 1280.0
offset_bottom = 648.0
theme_override_styles/normal = SubResource("StyleBoxFlat_f4i7g")
label_settings = SubResource("LabelSettings_xbboc")
autowrap_mode = 2

[node name="DialogueText" type="Label" parent="Area2D/CanvasLayer"]
z_index = 1
offset_left = 340.0
offset_top = 486.0
offset_right = 980.0
offset_bottom = 648.0
autowrap_mode = 2

[node name="creeper" type="Sprite2D" parent="Area2D/CanvasLayer"]
z_index = -1
position = Vector2(1082, 419)
scale = Vector2(0.404, 0.40399998)
texture = ExtResource("3_xbboc")

[node name="shadowbox" type="Sprite2D" parent="Area2D/CanvasLayer"]
position = Vector2(640, 523)
texture = ExtResource("4_nsmq5")

[node name="InteractionLabel" type="Label" parent="Area2D"]
offset_left = -4.0
offset_top = -59.0
offset_right = 45.0
offset_bottom = -36.0
text = "POYO!"
label_settings = SubResource("LabelSettings_pja81")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
